--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,55 +13,45 @@ name = "reth-bsc"
 path = "src/main.rs"
 
 [dependencies]
-reth = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-cli = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-cli-commands = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-basic-payload-builder = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-db = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-engine-local = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-chainspec = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-cli-util = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-discv4 = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a", features = [
-    "test-utils",
-] }
-reth-engine-primitives = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-ethereum-forks = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a", features = [
-    "serde",
-] }
-reth-ethereum-payload-builder = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-payload-builder-primitives = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-chain-state = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-ethereum-primitives = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-eth-wire = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-eth-wire-types = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-evm = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-evm-ethereum = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-metrics = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-node-core = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-revm = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-network = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a", features = [
-    "test-utils",
-] }
-reth-network-p2p = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-network-api = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-node-ethereum = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a", features = [
-    "test-utils",
-] }
-reth-network-peers = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-payload-primitives = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-ethereum-engine-primitives = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-primitives = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-primitives-traits = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-provider = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a", features = [
-    "test-utils",
-] }
-reth-rpc-eth-api = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-rpc-engine-api = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-tracing = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-trie-common = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-trie-db = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-tasks = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
-reth-transaction-pool = { git = "https://github.com/bnb-chain/reth.git", rev = "cbdace8f0210f3b0bad454d16d3368607dd4904a" }
+reth = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-cli = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-cli-commands = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-basic-payload-builder = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-db = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-engine-local = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-chainspec = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-cli-util = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-discv4 = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5", features = ["test-utils"] }
+reth-engine-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-ethereum-forks = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5", features = ["serde"] }
+reth-ethereum-payload-builder = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-payload-builder-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-chain-state = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-ethereum-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-eth-wire = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-eth-wire-types = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-evm = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-evm-ethereum = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-metrics = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-node-core = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-revm = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-network = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5", features = ["test-utils"] }
+reth-network-p2p = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-network-api = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-node-ethereum = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5", features = ["test-utils"] }
+reth-network-peers = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-payload-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-ethereum-engine-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-primitives = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-primitives-traits = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-provider = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5", features = ["test-utils"] }
+reth-rpc-eth-api = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-rpc-engine-api = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-tracing = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-trie-common = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-trie-db = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-tasks = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
+reth-transaction-pool = { git = "https://github.com/bnb-chain/reth.git", tag = "v0.0.5" }
 revm = "29.0.0"
 
 # alloy dependencies
@@ -160,13 +150,18 @@ libc = "0.2"
 
 [features]
 default = ["jemalloc"]
-jemalloc = ["dep:tikv-jemallocator"]
+jemalloc = ["dep:tikv-jemallocator", "reth/jemalloc"]
 dev = ["reth-cli-commands/arbitrary", "reth/dev", "revm/dev"]
 
 asm-keccak = [
+    "reth/asm-keccak",
     "reth-node-core/asm-keccak",
     "reth-primitives/asm-keccak",
     "reth-node-ethereum/asm-keccak",
+]
+
+io-uring = [
+    "reth/io-uring",
 ]
 
 serde = [
