--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,15 @@ services:
     container_name: reth-bsc
     restart: unless-stopped
     ports:
-      - "10.1.1.86:9001:${METRICS_PORT}"
+      - "10.1.1.86:${METRICS_PORT}:9001"
       - "10.1.1.86:8545:8545"
       - "10.1.1.86:8546:8546"
-    command: node --chain bsc --datadir=/data --http --http.api all --http.port=8545 --ws --ws.port=8547 --rpc.max-connections=4096 --rpc.max-response-size=1000 --db.max-size=8TB --db.read-transaction-timeout=0 --metrics=127.0.0.1:9001 --log.file.directory=/logs --log.file.max-size=200 --log.file.max-files=5 --log.file.filter=info
+      - "10.1.1.86:8546:8546"
+      - "37.27.143.83:13454:13454"
+      - "37.27.143.83:13454:13454/udp"
+      - "37.27.143.83:30303:30303"
+      - "37.27.143.83:30303:30303/udp"
+    command: node --chain bsc --datadir=/data --http --http.api all --http.addr=0.0.0.0 --http.port=8545 --ws --ws.addr=0.0.0.0 --ws.port=8547 --rpc.max-connections=4096 --rpc.max-response-size=1000 --db.max-size=8TB --db.read-transaction-timeout=0 --metrics=0.0.0.0:9001 --log.file.directory=/logs --log.file.max-size=200 --log.file.max-files=5 --log.file.filter=info
     volumes:
       - /home/deploy/bsc_data/server/data-seed/data_dir:/data
       - /home/deploy/bsc_node/logs:/logs
